src/snapshots/untitled_lang__grammar__tests__block_expr.snap
---
source: src/grammar.rs
expression: "parse(\"{1;} + {2;};\")"
---
(
    Root@0..12
      ExprStmt@0..12
        BinaryExpr@0..11
          BlockExpr@0..5
            OpenBrace@0..1 "{"
            ExprStmt@1..3
              Literal@1..2
                Number@1..2 "1"
              Semicolon@2..3 ";"
            CloseBrace@3..4 "}"
            Whitespace@4..5 " "
          Plus@5..6 "+"
          Whitespace@6..7 " "
          BlockExpr@7..11
            OpenBrace@7..8 "{"
            ExprStmt@8..10
              Literal@8..9
                Number@8..9 "2"
              Semicolon@9..10 ";"
            CloseBrace@10..11 "}"
        Semicolon@11..12 ";"
    ,
    [],
)
