src/snapshots/untitled_lang__grammar__tests__expr_stmt.snap
---
source: src/grammar.rs
expression: "parse(\"1 + 2 * 3;\")"
---
(
    Root@0..10
      ExprStmt@0..10
        BinaryExpr@0..9
          Literal@0..2
            Number@0..1 "1"
            Whitespace@1..2 " "
          Plus@2..3 "+"
          Whitespace@3..4 " "
          BinaryExpr@4..9
            Literal@4..6
              Number@4..5 "2"
              Whitespace@5..6 " "
            Star@6..7 "*"
            Whitespace@7..8 " "
            Literal@8..9
              Number@8..9 "3"
        Semicolon@9..10 ";"
    ,
    [],
)
