src/snapshots/untitled_lang__grammar__tests__let_stmt.snap
---
source: src/grammar.rs
expression: "parse(\"let a: int = 1;\")"
---
(
    Root@0..15
      LetStmt@0..15
        LetKw@0..3 "let"
        Whitespace@3..4 " "
        TypedIdent@4..11
          Ident@4..5 "a"
          Colon@5..6 ":"
          Whitespace@6..7 " "
          Ident@7..10 "int"
          Whitespace@10..11 " "
        Equals@11..12 "="
        Whitespace@12..13 " "
        NumberLiteral@13..14
          Number@13..14 "1"
        Semicolon@14..15 ";"
    ,
    [],
)
